[gd_scene load_steps=3 format=3 uid="uid://c6w5a5enb6b6"]

[ext_resource type="Script" path="res://Offramp.gd" id="1_vib43"]
[ext_resource type="Theme" uid="uid://dwhdbn627wysc" path="res://Themes/offramp_theme.tres" id="1_vnq2u"]

[node name="Offramp" type="GraphNode" groups=["OFFRAMP", "graph_nodes"]]
offset_right = 296.0
offset_bottom = 162.0
mouse_default_cursor_shape = 6
theme = ExtResource("1_vnq2u")
theme_override_constants/separation = 10
title = "NodeTitle"
position_offset = Vector2(829, 274)
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_vib43")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Destination"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Dialog Tree"
popup/item_0/id = 0
popup/item_1/text = "Terminate"
popup/item_1/id = 1

[node name="FileLineHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FileLineHBox"]
layout_mode = 2
text = "Filename:"

[node name="LineEdit" type="LineEdit" parent="FileLineHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLineHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="TitleLineHBox"]
layout_mode = 2
text = "Target Node:"

[node name="LineEdit" type="LineEdit" parent="TitleLineHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OutcomeLineHBox" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="OutcomeLineHBox"]
layout_mode = 2
text = "Outcome_key:"

[node name="LineEdit" type="LineEdit" parent="OutcomeLineHBox"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_dest_dropdown_item_selected"]
